# AdventCirno_RT1052_NNCU

./: .cproject  .gitignore  .project  AdventCirno_RT1052_NNCU LinkServer Debug.launch  AdventCirno_RT1052_v2.mex  CMakeLists.txt  README.md
Debug/: AdventCirno_RT1052_NNCU.axf  AdventCirno_RT1052_NNCU_Debug.ld  AdventCirno_RT1052_NNCU_Debug_library.ld  AdventCirno_RT1052_NNCU_Debug_memory.ld  MIMXRT1052xxxxB_part.xml  makefile  objects.mk  sources.mk
Debug/CMSIS/NN/ActivationFunctions/: subdir.mk
Debug/CMSIS/NN/ConvolutionFunctions/: subdir.mk
Debug/CMSIS/NN/FullyConnectedFunctions/: subdir.mk
Debug/CMSIS/NN/NNSupportFunctions/: subdir.mk
Debug/CMSIS/NN/PoolingFunctions/: subdir.mk
Debug/CMSIS/NN/SoftmaxFunctions/: subdir.mk
Debug/amazon-freertos/freertos_kernel/: subdir.mk
Debug/board/: subdir.mk
Debug/component/lists/: subdir.mk
Debug/component/osa/: subdir.mk
Debug/component/serial_manager/: subdir.mk
Debug/component/uart/: subdir.mk
Debug/device/: subdir.mk
Debug/drivers/: subdir.mk
Debug/fatfs/source/: subdir.mk
Debug/fatfs/source/fsl_ram_disk/: subdir.mk
Debug/fatfs/source/fsl_sd_disk/: subdir.mk
Debug/littlefs/: subdir.mk
Debug/sdmmc/port/: subdir.mk
Debug/sdmmc/src/: subdir.mk
Debug/source/: subdir.mk
Debug/source/ac_lib/: subdir.mk
Debug/source/cm_backtrace/: subdir.mk
Debug/source/nncu/: subdir.mk
Debug/source/smartcar/: subdir.mk
Debug/startup/: subdir.mk
Debug/usb/device/class/: subdir.mk
Debug/usb/device/source/: subdir.mk
Debug/usb/device/source/ehci/: subdir.mk
Debug/usb/phy/: subdir.mk
Debug/utilities/: subdir.mk
Debug/xip/: subdir.mk
amazon-freertos/freertos_kernel/: tasks.c
board/: board.c  board.h  peripherals.c  peripherals.h  pin_mux.c  pin_mux.h
doc/smartcar-custom/: README.md
doc/smartcar-custom/ModificationNotes/: Changelog.md
doc/smartcar-custom/OptimizationTips/: 6.sc库的使用.docx  7.原理图.docx  8.优化.docx  9.启动过程.docx
drivers/: fsl_flexspi.c  fsl_flexspi.h
sdmmc/port/: fsl_sdmmc_event.c
source/: AdventCirno_RT1052_NNCU.c  FreeRTOSConfig.h  NNCU_Config.h  model.nncu.c  tv.nctv.c
source/ac_lib/: AC_Command.c  AC_Command.h  AC_Control.c  AC_Control.h  AC_Image_ECG.c  AC_Image_ECG.h  AC_Menu.c  AC_Menu.h  AC_Pit.c  AC_Pit.h  AC_SD_Storage.c  AC_SD_Storage.h  Image.c  Image.h
source/examples/: test.h
source/nncu/: aia_cmsisnn_ext.c  aia_cmsisnn_ext.h  dataset_test.c  model_smartcar_ad_run.c  model_smartcar_ad_weit.c  nncu_Config.h
source/nncu/Network/CNN_Midline_0812/: model_smartcar_ad_run.c  model_smartcar_ad_weit.c
source/nncu/Network/CNN_MotorProspect_0811/: model_smartcar_ad_run.c  model_smartcar_ad_weit.c
source/nncu/Network/CNN_ServoProspect_0811/: model_smartcar_ad_run.c  model_smartcar_ad_weit.c
source/nncu/Network/CNN_Servo_0811/: model_smartcar_ad_run.c  model_smartcar_ad_weit.c
source/nncu/Network/DenseClassification0807_0005/: model_smartcar_ad_weit.c
source/nncu/Network/DenseClassification_0806/: model_smartcar_ad_weit.c
source/nncu/Network/DenseClassification_0806_2245/: model_smartcar_ad_weit.c
source/nncu/Network/DenseClassification_0806_fix/: model_smartcar_ad_run.c  model_smartcar_ad_weit.c
source/nncu/Network/DenseClassification_0807_0151/: model_smartcar_ad_weit.c
source/nncu/Network/DenseClassification_Manual/: model_smartcar_ad_weit.c
source/nncu/Network/DenseClassification_Manual_Improved/: model_smartcar_ad_weit.c
source/nncu/Network/Dense_0809_1904/: model_smartcar_ad_run.c  model_smartcar_ad_weit.c
source/nncu/Network/Dense_10MB_60_38/: model_smartcar_ad_run.c  model_smartcar_ad_weit.c
source/nncu/Network/Dense_10MB_72_70/: model_smartcar_ad_run.c  model_smartcar_ad_weit.c
source/nncu/Network/Dense_10MB_CNN_60_10/: model_smartcar_ad_run.c  model_smartcar_ad_weit.c
source/nncu/Network/Dense_10MB_CNN_60_59/: model_smartcar_ad_run.c  model_smartcar_ad_weit.c
source/nncu/Network/Dense_10MB_LiteM_70_77/: model_smartcar_ad_weit.c
source/nncu/Network/Dense_10MB_M_70_60/: model_smartcar_ad_run.c  model_smartcar_ad_weit.c
source/nncu/Network/Dense_10MB_Plus_70_158/: model_smartcar_ad_run.c  model_smartcar_ad_weit.c
source/nncu/Network/Dense_10MB_Servo/: model_smartcar_ad_run.c  model_smartcar_ad_weit.c
source/nncu/Network/Dense_10MB_Smooth_60_40/: model_smartcar_ad_run.c  model_smartcar_ad_weit.c
source/nncu/Network/Dense_10MB_Smooth_60_72/: model_smartcar_ad_run.c  model_smartcar_ad_weit.c
source/nncu/Network/Dense_10MB_Smooth_Original_60_120/: model_smartcar_ad_run.c  model_smartcar_ad_weit.c
source/nncu/Network/Dense_10MB_Smooth_Original_60_73/: model_smartcar_ad_weit.c
source/nncu/Network/Dense_10MB_Smooth_Origional_60_37/: model_smartcar_ad_run.c  model_smartcar_ad_weit.c
source/nncu/Network/Dense_10MB_Smooth_Origional_70_80/: model_smartcar_ad_run.c
source/nncu/Network/Dense_2.8m_servo_199/: model_smartcar_ad_run.c  model_smartcar_ad_weit.c
source/nncu/Network/Dense_Complex/: model_smartcar_ad_weit.c
source/nncu/Network/Dense_Complex_200_Round/: model_smartcar_ad_run.c
source/nncu/Network/Dense_Complex_Pro/: model_smartcar_ad_run.c  model_smartcar_ad_weit.c
source/nncu/Network/Dense_Midline_0812/: model_smartcar_ad_run.c  model_smartcar_ad_weit.c
source/nncu/Network/Dense_MotorProspect_0810/: model_smartcar_ad_run.c  model_smartcar_ad_weit.c
source/nncu/Network/Dense_ServoProspect_0810/: model_smartcar_ad_run.c  model_smartcar_ad_weit.c
source/nncu/Network/Dense_ServoProspect_0810_170/: model_smartcar_ad_weit.c
source/nncu/Network/Dense_Simple/: model_smartcar_ad_run.c
source/nncu/Network/Dense_Simple_4Layer/: model_smartcar_ad_run.c  model_smartcar_ad_weit.c
source/nncu/aiann/: aia_cmsisnn_ext.h
source/smartcar/: sc_ac_MPU6050.c  sc_ac_MPU6050.h  sc_ac_delay.c  sc_ac_delay.h  sc_ac_i2c_soft.c  sc_ac_i2c_soft.h  sc_ac_key_5D.c  sc_ac_key_5D.h  sc_ac_pwm.c  sc_ac_pwm.h  sc_camera_common.c  sc_camera_common.h  sc_enc.c  sc_enc.h  sc_flash.c  sc_flash.h  sc_i2c.c  sc_i2c.h  sc_oled.c  sc_oled.h  sc_pwm.c  sc_pwm.h  sc_sd.c  sc_sd.h  sc_uart.c  sc_uart.h  sc_upload.c  sc_upload.h
(+14 files in other folders)
